--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -6,6 +6,7 @@
     </data>
 
     <LinearLayout
+        android:id="@+id/layoutLine"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
